tests/miniJava/neg/005288_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public void java ( ) { return 0 ; } }
